@@ -19,10 +19,10 @@
 #pragma once
 
 #include "afxtempl.h"
-#include "svnstatus.h"
 #include "Registry.h"
 #include "ResizableDialog.h"
 #include "afxcmn.h"
+#include "SVNStatusListCtrl.h"
 
 
 // CChangedDlg dialog
@@ -35,7 +35,6 @@ public:
 	CChangedDlg(CWnd* pParent = NULL);   // standard constructor
 	virtual ~CChangedDlg();
 
-	void AddEntry(CString file, svn_wc_status_t * status); 
 // Dialog Data
 	enum { IDD = IDD_CHANGEDFILES };
 
@@ -43,8 +42,6 @@ protected:
 	virtual void			DoDataExchange(CDataExchange* pDX);    // DDX/DDV support
 	afx_msg void			OnPaint();
 	afx_msg HCURSOR			OnQueryDragIcon();
-	afx_msg void			OnContextMenu(CWnd* pWnd, CPoint point);
-	afx_msg void			OnNMDblclkChangedlist(NMHDR *pNMHDR, LRESULT *pResult);
 	virtual BOOL			OnInitDialog();
 	virtual void			OnOK();
 	virtual void			OnCancel();
@@ -54,17 +51,10 @@ protected:
 protected:
 	HICON			m_hIcon;
 	HANDLE			m_hThread;
-	CStringArray	m_templist;
 
 public:
-	SVNStatus		m_svnstatus;
-	CListCtrl		m_FileListCtrl;
+	CSVNStatusListCtrl	m_FileListCtrl;
 	CString			m_path;
-	CDWordArray		m_arWCStatus;
-	CDWordArray		m_arRepoStatus;
-	CDWordArray		m_arRevisions;
-	CStringArray	m_arPaths;
-	afx_msg BOOL OnSetCursor(CWnd* pWnd, UINT nHitTest, UINT message);
 };
 
 DWORD WINAPI ChangedStatusThread(LPVOID pVoid);
