@@ -27,6 +27,8 @@
        other than explorer. (Stefan)
 - ADD: Reverting got its own dialog where you can select
        and deselect files/folders from reverting. (Stefan)
+- ADD: Sortable columns in the "check for updates" 
+       dialog. (Stefan)
 - CHG: Searching in the log dialog now also searches
        the changed paths. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
